--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+# Starter content (this is included in the UE)
+Content/StarterContent
